--- a/03-get_started.Rmd
+++ b/03-get_started.Rmd
@@ -2,7 +2,7 @@
 
 
 
-## Créer un projet sous Rstudio pour vous permettre de recencer vos travaux.
+## Créer un projet sous Rstudio pour vous permettre de recenser vos travaux.
 
 
 ```{r collecte prez projet rstudio, warning=FALSE, echo=FALSE, results='asis'}
